fixed scalign

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -88,7 +88,7 @@ http://animateyourhtml5.appspot.com/pres/#5
    20%  { -webkit-transform: rotateY(180deg) scale(0.5) translateZ(-1px) }
    40%  { -webkit-transform: rotateY(180deg) scale(1.0) translateZ(-1px) }
    80%  { -webkit-transform: rotateY(180deg) scale(1.0) translateZ(-1px) }
-   100% { -webkit-transform: rotateY(180deg) scale(0.5 ) translateZ(-1px) }
+   100% { -webkit-transform: rotateY(180deg) scale(0.5 ) translateZ(0px) }
 }
 
 @keyframes flipAndZoomAnim
@@ -97,17 +97,17 @@ http://animateyourhtml5.appspot.com/pres/#5
    20%  { transform: rotateY(180deg) scale(0.5) translateZ(-1px) }
    40%  { transform: rotateY(180deg) scale(1.0) translateZ(-1px) }
    80%  { transform: rotateY(180deg) scale(1.0) translateZ(-1px) }
-   100% { transform: rotateY(180deg) scale(0.5) translateZ(-1px) }
+   100% { transform: rotateY(180deg) scale(0.5) translateZ(0px) }
 }
 
 .flipAndZoom {
     webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
      z-index: 5;
-    -webkit-transform: rotateY(180deg) scale(0.5) translateZ(-1px);
-    -moz-transform: rotateY(180deg) scale(0.5) translateZ(-1px);
-    -o-transform: rotateY(180deg) scale(0.5) translateZ(-1px);
-    transform: rotateY(180deg) scale(0.5) translateZ(-1px);
+    -webkit-transform: rotateY(180deg) scale(0.5) translateZ(0px);
+    -moz-transform: rotateY(180deg) scale(0.5) translateZ(0px);
+    -o-transform: rotateY(180deg) scale(0.5) translateZ(0px);
+    transform: rotateY(180deg) scale(0.5) translateZ(0px);
     -webkit-animation-name: flipAndZoomAnim;
     -moz-animation-name: flipAndZoomAnim;
     -o-animation-name: flipAndZoomAnim;
